# gdal_dll

./: .gitignore  CMakeLists.txt  vcpkg.json
Modules/: CMakeLists.txt
Modules/GDAL_DLL/: CMakeLists.txt  GDALDLL.cpp  GDALDLL.h
Resources/proj/: vcpkg.spdx.json  vcpkg_abi_info.txt
Tests/: CMakeLists.txt  TEST.cpp
gdal_data/: vcpkg.spdx.json  vcpkg_abi_info.txt
proj/: proj-targets.cmake  proj4-targets.cmake
